Unit tests for Order service controller and event Consumer